[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://weapons/rifle/Rifle.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/GUI.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 32 )

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StaminaTimer" type="Timer" parent="."]

[node name="Rifle_" type="Node2D" parent="."]

[node name="Rifle" parent="Rifle_" instance=ExtResource( 3 )]
position = Vector2( 76, 2 )
scale = Vector2( 1, 1 )
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
